# swep1r-tools

./: CMakeLists.txt  README.md  arguments.py  decompress.c  extract-data.c  extract-racer-tab.py  out_modelblock.py  out_splineblock.py  out_spriteblock.py  out_textureblock.py  parse-racer-tab.py  scr2wav.py
